--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,5 @@
-# Get your API key here - https://e2b.dev/
-E2B_API_KEY=
-
-# OpenAI API Key
-OPENAI_API_KEY=
-
-# Other providers
-ANTHROPIC_API_KEY=
-GROQ_API_KEY=
-FIREWORKS_API_KEY=
-TOGETHER_API_KEY=
-GOOGLE_AI_API_KEY=
-GOOGLE_VERTEX_CREDENTIALS=
-MISTRAL_API_KEY=
-XAI_API_KEY=
+# Get your API key here - https://openrouter.ai/
+OPENROUTER_API_KEY=
 
 ### Optional env vars
 
