--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e2b-fragments",
+  "name": "code-canvas",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.1.6",
-    "@ai-sdk/fireworks": "^0.2.6",
-    "@ai-sdk/google": "^1.2.3",
-    "@ai-sdk/google-vertex": "^2.2.3",
-    "@ai-sdk/mistral": "^1.0.1",
     "@ai-sdk/openai": "^1.3.15",
     "@e2b/code-interpreter": "^1.0.2",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -39,7 +34,6 @@
     "lucide-react": "^0.396.0",
     "next": "^14.2.30",
     "next-themes": "^0.3.0",
-    "ollama-ai-provider": "^1.2.0",
     "posthog-js": "^1.158.3",
     "prismjs": "^1.30.0",
     "react": "^18",
