Refactor codebase for OpenRouter and lightweight design

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-# Get your API key here - https://openrouter.ai/
+# OpenRouter API key (required)
 OPENROUTER_API_KEY=
 
 ### Optional env vars
@@ -17,16 +17,12 @@ KV_REST_API_TOKEN=
 # Supabase (auth)
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
+NEXT_PUBLIC_ENABLE_SUPABASE=
 
 # PostHog (analytics)
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
+NEXT_PUBLIC_ENABLE_POSTHOG=
 
-### Disabling functionality (when uncommented)
-
-# Disable API key and base URL input in the chat
-# NEXT_PUBLIC_NO_API_KEY_INPUT=
-# NEXT_PUBLIC_NO_BASE_URL_INPUT=
-
-# Hide local models from the list of available models
-# NEXT_PUBLIC_HIDE_LOCAL_MODELS=
+# Sandbox execution (required for code execution)
+E2B_API_KEY=
